@@ -1,0 +1,86 @@
+begin_unit
+begin_package
+DECL|package|org.apache.solr.analysis
+package|package
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|analysis
+package|;
+end_package
+begin_comment
+comment|/**  * Licensed to the Apache Software Foundation (ASF) under one or more  * contributor license agreements.  See the NOTICE file distributed with  * this work for additional information regarding copyright ownership.  * The ASF licenses this file to You under the Apache License, Version 2.0  * (the "License"); you may not use this file except in compliance with  * the License.  You may obtain a copy of the License at  *  *     http://www.apache.org/licenses/LICENSE-2.0  *  * Unless required by applicable law or agreed to in writing, software  * distributed under the License is distributed on an "AS IS" BASIS,  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.  * See the License for the specific language governing permissions and  * limitations under the License.  */
+end_comment
+begin_import
+import|import
+name|java
+operator|.
+name|io
+operator|.
+name|Reader
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|analysis
+operator|.
+name|Tokenizer
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|analysis
+operator|.
+name|cn
+operator|.
+name|smart
+operator|.
+name|SentenceTokenizer
+import|;
+end_import
+begin_comment
+comment|/**  * Factory for the SmartChineseAnalyzer {@link SentenceTokenizer}  * @lucene.experimental  */
+end_comment
+begin_class
+DECL|class|SmartChineseSentenceTokenizerFactory
+specifier|public
+class|class
+name|SmartChineseSentenceTokenizerFactory
+extends|extends
+name|BaseTokenizerFactory
+block|{
+DECL|method|create
+specifier|public
+name|Tokenizer
+name|create
+parameter_list|(
+name|Reader
+name|input
+parameter_list|)
+block|{
+return|return
+operator|new
+name|SentenceTokenizer
+argument_list|(
+name|input
+argument_list|)
+return|;
+block|}
+block|}
+end_class
+end_unit
